--- a/E-Commerce/public/template_AMLEO/furni-1.0.0/css/style.css
+++ b/E-Commerce/public/template_AMLEO/furni-1.0.0/css/style.css
@@ -119,7 +119,7 @@ a {
         font-size: 54px; } }
   .hero p {
     color: rgba(255, 255, 255, 0.5);
-    margin-botom: 30px; }
+    margin-bottom: 30px; }
   .hero .hero-img-wrap {
     position: relative; }
     .hero .hero-img-wrap img {
@@ -316,9 +316,9 @@ a {
   .we-help-section .imgs-grid {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[27];
+    -ms-grid-columns: (1fr)[];
     grid-template-columns: repeat(27, 1fr);
-    position: relative; }
+    position : relative; }
     .we-help-section .imgs-grid:before {
       position: absolute;
       content: "";
