--- a/E-Commerce/public/template_AMLEO/furni/css/style.css
+++ b/E-Commerce/public/template_AMLEO/furni/css/style.css
@@ -123,12 +123,10 @@ a {
   .hero .hero-img-wrap {
     position: relative; }
     .hero .hero-img-wrap img {
-      position: relative;
-      top: 0px;
-      right: 0px;
-      z-index: 2;
-      max-width: 780px;
-      left: -20px; }
+       
+      width: 60% !important; 
+      margin-left: 20% !important; 
+      margin-top: -100px !important;}
       @media (min-width: 768px) {
         .hero .hero-img-wrap img {
           right: 0px;
